# digital-twin-codegen-agent

./: .gitignore  README.md  pyproject.toml
agent/prompts/: codegen.md  document_analyzer.md
artifacts/: digital_twin_design.md  digital_twin_spec.yaml  domain_inventory.md  fuzz_testcases.py
artifacts/evaluations/: analyze_attempt1_1778661807.md  analyze_attempt2_1778662064.md  analyze_attempt3_1778662312.md  design_attempt1_1778663193.md  generate_attempt1_1778665166.md  input-gen_attempt1_1778739287.md  spec_attempt1_1778662588.md  spec_attempt2_1778662873.md
docs/: Historical market data PRD-v23-20260513_065644.md  light_switch_prd.md  market data api documentation-v3-20260513_065509.md
prompts/: 02_spec_generator.md  03_design_generator.md  04_codegen.md  05_test_generator.md  06_reviewer.md  07_input_generator.md  evaluate.md  review.md
src/digital_twin_codegen_agent/: cli.py  config.py  evaluate.py  llm.py  pipeline.py
src/digital_twin_codegen_agent/artifacts/: writer.py
src/digital_twin_codegen_agent/codegen/: __init__.py
src/digital_twin_codegen_agent/documents/: chunker.py  loader.py
src/digital_twin_codegen_agent/execution/: runner.py
src/digital_twin_codegen_agent/ir/: parser.py  schemas.py  validator.py
src/digital_twin_codegen_agent/review/: coverage.py  report.py
workspace/generated_twin/: twin.py
