[project]
name = "digital-twin-codegen-agent"
version = "0.1.0"
description = "Digital twin code generation agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "dotenv >= 0.9.0",
]

[project.scripts]
dt-codegen = "digital_twin_codegen_agent.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
